# cyberpunk-looter

./: .dockerignore  .env.example  .env.grok.example  .gitignore  .replit  AGENTS.md  CLAUDE.md  CONFIGURATION_STATUS.md  DEPENDENCIES.md  DEPLOYMENT.md  DISCORD_SETUP.md  Dockerfile  GETTING_STARTED.md  GROK_SETUP.md  Makefile  OPENAI_SETUP.md  README.md  RIPER-5.md  TESTING.md  architecture.mmd  bot.py  clean.ps1  graphrag_system.py  llm_cli.sh  memory_system.py  object_storage.py  pyproject.toml  rag_system.py  replit.md  requirements.txt  run_tests.sh  validate.ps1
.claude/: CLAUDE.md
.github/: README.md
.github/workflows/: app-deploy.yml  deploy.yml  otel-sidecar-build.yml  terraform.yml
.packmind/: standards-index.md
.packmind/standards/: uncle-bob.md
docs/: DEPLOYMENT.md  LLM_CLI_README.md  TESTING.md
knowledge_base/: sample_doc1.md  sample_doc2.md  sample_doc3.md
otel_sidecar/: Dockerfile  config.yaml
scripts/: generate-requirements.sh  test-neo4j-connection.sh
spec/01-agentic/: 1-research.md  2-architecture.md  3-plan.md  4-implementation-summary.md  5-testing-summary.md
src/: __init__.py  agentic_handler.py  app_config.py  app_storage.py  bot.py  bot_reactions.py  class_design.mmd  config.py  container.py  conversation_memory.py  conversation_service.py  exceptions.py  graphrag_system.py  interfaces.py  llm_cli.py  llm_service.py  memory_system.py  message_builder.py  models.py  party_repository.py  prompt_library.py  test_neo4j_resilience.py  tool_execution_service.py  tool_system.py  unified_memory_system.py  user_memory_repository.py
src/tools/: __init__.py  add_party_character.py  base.py  recommend_gear.py  registry.py  remove_party_character.py  view_party_members.py
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  conftest.py  test_agentic_confirmation.py  test_agentic_integration.py  test_app_storage.py  test_bot_reactions.py  test_graphrag_system.py  test_llm_service.py  test_memory_system.py  test_neo4j_resilience.py  test_party_system.py  test_recommend_gear_integration.py  test_tool_system.py
