[project]
name = "cyberpunk-looter"
version = "0.1.0"
description = "Discord bot with GraphRAG using Neo4j and memory system"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "discord.py>=2.4.0",
    "google-cloud-storage>=2.19.0",
    "langchain>=0.3.27",
    "neo4j-rust-ext>=5.28.2",
    "neo4j-graphrag>=1.10.0",
    "openai>=2.3.0",
    "pypdf>=6.1.1",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-xdist>=3.3.1",
    "coverage>=7.3.0",
]
dev = [
    "black>=23.7.0",
    "flake8>=6.1.0",
    "pylint>=2.17.5",
    "mypy>=1.5.0",
    "pytest-html>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--showlocals",
    "-ra",
    "--strict-markers",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--color=yes",
    "--durations=10",
]
markers = [
    "unit: Unit tests that don't require external dependencies",
    "integration: Integration tests that may require external services",
    "slow: Tests that take a long time to run",
    "asyncio: Tests that use async/await",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
]

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.pytest_cache
  | __pycache__
  | htmlcov
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
